Realizado integralçao com oauth2

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "prettus/l5-repository": "^2.6",
         "bestmomo/scafold": "^1.0",
         "illuminate/html": "^5.0",
-		"lucadegasperi/oauth2-server-laravel": "^5.2"
+		"lucadegasperi/oauth2-server-laravel": "5.0"
 
     },
     "require-dev": {
